# pokertg

./: .gitignore  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: pocket_probabilities.rs  sim.rs
