[package]
name = "pokertg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poker = "0.4.1"
polars = { version = "0.25.1", features = ["lazy"] }
clap = { version = "4.0.29", features = [ "derive" ] }
pbr = "1.0.4"

[[bin]]
name = "pokertg_sim"
path = "src/sim.rs"

[[bin]]
name = "pokertg_prob"
path = "src/pocket_probabilities.rs"
